--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "windows-eventlog",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Native win32 module to log messages to the Windows EventLog",
   "keywords": [
     "windows",
@@ -22,17 +22,18 @@
   },
   "main": "index.js",
   "scripts": {
-    "install": "node-gyp clean configure build || (exit 0)"
+    "install": "node-gyp-build",
+    "prebuild": "prebuildify --all"
   },
-  "os": [
-    "win32"
-  ],
   "cpu": [
     "ia32",
     "x64"
   ],
   "dependencies": {
-    "bindings": "^1.3.0",
-    "nan": "^2.7.0"
+    "nan": "^2.19.0",
+    "node-gyp-build": "^4.8.0"
+  },
+  "devDependencies": {
+    "prebuildify": "^6.0.0"
   }
 }
