--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@strychnine-labs/windows-eventlog",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "description": "Native win32 module to log messages to the Windows EventLog",
   "keywords": [
     "windows",
@@ -9,7 +9,7 @@
     "logging",
     "logger"
   ],
-  "homepage": "http://jfromaniello.github.com/node-windows-eventlog",
+  "homepage": "https://github.com/Strychnine-Dev/node-windows-eventlog",
   "author": {
     "name": "Mason Buchanan",
     "email": "masonwb@gmail.com",
@@ -25,18 +25,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/jfromaniello/node-windows-eventlog.git"
+    "url": "https://github.com/Strychnine-Dev/node-windows-eventlog"
   },
   "main": "index.js",
   "types": "types",
   "scripts": {
     "install": "node-gyp-build",
-    "prebuild": "prebuildify --napi -t 20.13.1",
+    "build": "node-gyp-build",
+    "prebuild": "prebuildify",
     "pack": "npm pack",
     "publish": "npm publish --access public"
   },
   "dependencies": {
-    "nan": "^2.19.0",
+    "node-addon-api": "^8.0.0",
     "node-gyp-build": "^4.8.1"
   },
   "devDependencies": {
